# OgameProfessor

./: Abraham.code-profile  NEXT_STEPS.py  README.md  data.py  disruptionchamber.py  energy.py  energyV2.py  energytech.py  pyproject.toml  tools.py
OgameProffesor_V1/: GameData.py  accounts.py  fusionplant.py  main.py  planets.py  resource_buildings.py  universes.py
OgameProffesor_V2/: manage.py
OgameProffesor_V2/OgameProffesor/: asgi.py  settings.py  urls.py  wsgi.py
_ogame_professor/classes/: account.py
_ogame_professor/database/: data.py
local/editor/: settings.json
ogame_professor/: main.py  manage.py  settings.py  urls.py  wsgi.py
ogame_professor/classes/: account.py
ogame_professor/core/: admin.py  forms.py  models.py  urls.py  views.py
ogame_professor/core/migrations/: 0001_initial.py  0002_metalmine.py
ogame_professor/front_end/html/: skeleton.html
ogame_professor/landing/: urls.py  views.py
ogame_professor/ogame_professor/: settings.py  urls.py
src/empire/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
src/empire/migrations/: 0001_initial.py  0002_alter_planetdb_planet_name_and_more.py  0003_alter_accountusersettingdb_options_and_more.py  0004_alter_accountusersettingdb_account_class.py  0005_alter_accountusersettingdb_account_class.py  0006_alter_accountusersettingdb_account_class.py  0007_alter_accountusersettingdb_account_class.py  0008_alter_accountusersettingdb_account_class_and_more.py  0009_delete_accounttechnologiesdb.py  0010_resourcebuildingdb.py  (+14 more)
src/ogame_professor/: asgi.py  settings.py  urls.py
(+15 files in other folders)
